syntax = "proto3";// Make sure to have proto3 for your proto files.
// generate separate or multiple java file for each generated class.
option java_multiple_files = true;
// Package inside the src/main/java where generated classes will reside.
option java_package = "smart.building.airService";
// Class name of the wrapper class which represent this file.
option java_outer_classname = "AirControlServiceImpl";

package smart;

service AirService {
	//Client Streaming
	rpc currAirQuality (stream CurrentAirRequest) returns (CurrentAirReply) {}

	//Bi-Directional Streaming
	rpc openCloseAirPurifier (stream AirPuriRequest) returns (stream AirPuriReply) {}

 }
// define each variable in rpc method separately
message CurrentAirRequest{
	string item = 1;
}
message CurrentAirReply{
	string message = 1;
}

message AirPuriRequest{
	string val = 1;
	int32 figure = 2;
}
message AirPuriReply{
	string message = 1;
}